--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/news"
         android:name="com.example.myapplication.ui.news.NewsFragment"
         android:label="News"
-        tools:layout="@layout/fragment_news" />
+        tools:layout="@layout/activity_maps" />
 
     <fragment
         android:id="@+id/setting"
