--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -7,6 +9,20 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/share_button"
+        style="@style/Theme.AppCompat.DayNight.DarkActionBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+        app:backgroundTint="#D3BCBC"
+        app:srcCompat="@drawable/ic_baseline_share_24"
+        android:elevation="2dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -25,10 +41,10 @@
             android:id="@+id/map_legend_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Cases"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +59,7 @@
                 android:paddingEnd="0dp"
                 android:text="0"
                 android:textColor="@color/black"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
             <View
                 android:layout_width="64dp"
@@ -58,7 +74,7 @@
                 android:paddingEnd="4dp"
                 android:text="LEGEND"
                 android:textColor="@color/black"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
         </LinearLayout>
 
         <TextView
@@ -66,9 +82,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/gradient_legend"
-            android:textSize="10sp"/>
+            android:textSize="10sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/screenshot_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="64dp"
+        android:background="@color/white"
+        tools:srcCompat="@tools:sample/avatars"
+        tools:visibility="invisible"
+        android:elevation="5dp"/>
 
 </RelativeLayout>
 
