--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -25,6 +25,7 @@
         android:elevation="2dp"/>
 
     <LinearLayout
+        android:id="@+id/legend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
