--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -57,6 +57,11 @@
             android:summaryOff="Sharing is deactivated" />
     </PreferenceCategory>
 
+    <Preference
+        android:title="System Storage"
+        android:key="CACHE"
+        />
+
 
 
 
