Added calendar in tracking page

--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:text="TextView"
+            android:text="Sunny"
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|right"
             android:paddingEnd="16dp"
-            android:text="TextView"
+            android:text="68 °"
             android:textColor="#353535"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="TextView"
+            android:text="Los Angeles"
             android:textColor="#232323"
             android:textSize="30sp"
             android:textStyle="bold" />
